--- a/services/router/nginx.conf
+++ b/services/router/nginx.conf
@@ -16,9 +16,6 @@ server {
     ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
     ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 
-    proxy_read_timeout 120;
-    proxy_connect_timeout 120;
-    proxy_send_timeout 120;
 
     location / {
         try_files $uri $uri/ =404;
@@ -33,18 +30,8 @@ server {
 
       fastcgi_param REQUEST_URI $request_uri;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-      #fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
-      #fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-      #fastcgi_param PATH_INFO $fastcgi_path_info;
-      #fastcgi_param HTTPS $https;
 
-        #proxy_set_header X-Real-IP $remote_addr;
-        #proxy_set_header X-Forwarded-For $remote_addr;
-        #proxy_set_header X-Forwarded-Host $remote_addr;
-
-        #proxy_http_version 1.1;
-        #proxy_set_header Upgrade $http_upgrade;
-        #proxy_set_header Connection "upgrade";
+      fastcgi_read_timeout 300;
 
     }
 }
