--- a/services/phpmyadmin.yml
+++ b/services/phpmyadmin.yml
@@ -6,6 +6,8 @@ services:
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
     restart: always
+    ports:
+      - 8080:80
   disabled:
     build:
       context: './dummy'
