--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,25 @@ services:
       - mailer
       - main
   db:
-    image: mysql:5.7
+    image: mysql:8.4.2-oracle
+    platform: linux/arm64
     restart: always
-    command: --disable-partition-engine-check
+    command: --mysql-native-password=ON
     volumes:
-        #- ./init.sql:/data/application/init.sql
-        - ./init.sql:/docker-entrypoint-initdb.d/1.sql
+        # - ./init.sql:/docker-entrypoint-initdb.d/1.sql
         - db_data:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: projecsend
       # So you don't have to use root, but you can if you like
       MYSQL_USER: user
       # You can use whatever password you like
       MYSQL_PASSWORD: password
       # Password for root access
       MYSQL_ROOT_PASSWORD: password
-      #MYSQL_ROOT_HOST: '%'
+      MYSQL_ROOT_HOST: '%'
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    ports:
+      - 3306:3306
   mailer:
     extends:
       file: ./services/mailer.yml
