--- a/services/Dockerfile.projectsend
+++ b/services/Dockerfile.projectsend
@@ -1,20 +1,26 @@
 FROM php:8-fpm as base
 
-RUN curl -sL https://deb.nodesource.com/setup_14.x | bash -
-RUN apt-get update && apt-get install -y \
+# Install Node.js and npm
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - && \
+    apt-get update && apt-get install -y \
     git \
     curl \
     zip \
     unzip \
     libpng-dev \
-    --no-install-recommends nodejs \
-    && rm -rf /var/lib/apt/lists/*
+    nodejs \
+    npm \
+    --no-install-recommends && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-install gd pdo pdo_mysql
+# Install PHP extensions, including exif
+RUN apt-get update && apt-get install -y libexif-dev && docker-php-ext-install exif gd pdo pdo_mysql
 
-RUN npm install -g gulp
-RUN npm link gulp
+# Verify Node.js and npm installation
+RUN node -v && npm -v
 
+# Install gulp-cli globally
+RUN npm install -g gulp-cli
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -22,11 +28,20 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 FROM base as development
 
+# Copy project files
 ADD . /var/www/html
 
+# Set working directory
 WORKDIR /var/www/html
-RUN ls
+
+# Install npm dependencies
 RUN npm install
-RUN composer install
+
+# Install Composer dependencies with platform requirements ignored
+RUN composer install --ignore-platform-reqs
+
+# Ensure Babel is installed
 RUN npm install @babel/core
+
+# Build the project with gulp
 RUN gulp build
